# EAG-v1-Assignment-5

./: .gitignore  main.py  pyproject.toml
modified_assignment_4/: cnc_sample_code.py  mcp_server.py
