[project]
name = "eag-v1-assignment-5"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.12.0",
    "mcp>=1.6.0",
    "pyautogui>=0.9.54",
    "python-dotenv>=1.1.0",
    "rich>=14.0.0",
    "pillow>=11.1.0",
    "typer-cli>=0.15.2",
]
